<resources>
    <string name="app_name">Len-Den</string>

    <string name="dummy_button">Start लेनदेन</string>
    <string name="dummy_content">लेन\nदेन</string>
    <string name="title_activity_main">Len Den</string>

    <string name="action_settings">Settings</string>
    <string name="home_title">My Account</string>
    <string name="available_budget">Available Budget </string>
    <string name="cash">0 ₹</string>
    <string name="bills">bills</string>
    <string name="reports">reports</string>
    <string name="budget">budget</string>
    <string name="title_activity_budget">Budget</string>
    <string name="title_activity_expense">Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update DailyNeed</string>
    <string name="view_expense">View Expenses</string>
    <string name="create_budget">Create New Budget</string>
    <string name="update_budget">Update Existing Budget</string>
    <string name="title_activity_bills">Bills</string>
    <string name="title_activity_savings">Savings</string>
    <string name="title_activity_reports">Reports</string>
    <string name="delete_expense">Delete Expenses</string>
    <string name="add_category">Add Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="view_category">View Categories</string>
    <string name="title_activity_reset">Reset</string>
    <string name="reset_expenses">Reset Expenses</string>
    <string name="reset_budget">Reset Budget</string>
    <string name="reset_liabilities">Reset DailyNeed</string>
    <string name="reset_goals">Reset Goals</string>
    <string name="saving_target">Set Savings Target</string>
    <string name="current_saving">Show Current Saving</string>
    <string name="total_saving">Show Total Savings</string>
    <string name="expense_header">New Text</string>
    <string name="reset_header">New Text</string>
    <string name="Budget_header">New Text</string>
    <string name="saving_header">New Text</string>
    <string name="summary">Click Here for View Summary Report</string>
    <string name="title_activity_summary">Summary Report</string>
    <string name="summary_title">Summary View</string>
    <string name="budget_title">Budget</string>
    <string name="budget_overview">Budget Overview</string>
    <string name="current_budget">Current Budget</string>
    <string name="expenses_overview">Expenses Overview</string>
    <string name="savings_overbiew">Savings Overview</string>
    <string name="a_cash">Available Cash</string>
    <string name="p_expenses">Paid Expenses</string>
    <string name="li">Pay Letter</string>
    <string name="c_sav">Current Savings</string>
    <string name="t_sav">Target Savings</string>
    <string name="year">Enter Year</string>

</resources>
