<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hiteshjangid.lenden.expenseincome.ResetActivity"
    android:background="@drawable/button_back_white"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_header"
        android:id="@+id/reset_header"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/button_back_white"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:layout_margin="3dp" />

    <Button
        android:id="@+id/reset_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_header"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/button_back"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/reset_budget"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_back"
        android:layout_below="@id/reset_budget"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/reset_expenses"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_liabilities"
        android:layout_margin="20dp"
        android:background="@drawable/button_back"
        android:id="@+id/reset_liabilities"
        android:layout_below="@+id/reset_expenses"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_goals"
        android:layout_margin="20dp"
        android:background="@drawable/button_back"
        android:id="@+id/reset_goals"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reset_liabilities"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="15dp" />

    </RelativeLayout>