<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hiteshjangid.lenden.expenseincome.BudgetActivity"
    android:background="@drawable/button_back_white"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/budget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_back_white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Budget_header"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <Button
        android:id="@+id/create_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/budget_header"
        android:layout_margin="10dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_back"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/create_budget"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_budget"
        android:id="@+id/update_budget"
        android:gravity="center"
        android:layout_below="@+id/create_budget"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_back"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="25sp" />

</RelativeLayout>
