<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavingsActivity"
    android:background="@drawable/button_back_white"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/saving_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/button_back_white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/saving_header"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/saving_header"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        tools:context=".SavingsActivity">

        <Button
            android:id="@+id/saving_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/saving_target"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/current_saving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saving_target"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/current_saving"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/total_saving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_saving"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/total_saving"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>